Texty - zhodnoceni + zdroje

--- a/texts/markdown/07. zhodnoceni.md
+++ b/texts/markdown/07. zhodnoceni.md
@@ -2,8 +2,27 @@
 Zhodnocení aplikace z pohledu splnění požadavků je snadné, stačí si projít user stories z části týkající se metodiky a hned bude jasné, které byly naplněny a které nikoliv. Pokud tedy použijeme tento postup, dostaneme 95% splnění požadavků. V aplikaci chybí párování úkolů a jednotlivých commitů ze vzdáleného serveru. Analýza totiž ukázala, že tuto možnost má pouze GitHub, ostatní ji neposkytují, proto od ní bylo upuštěno a nebyla zahrnuta do aplikace.
 
 ## Práce s IDE Titanium Studio ##
-Součástí této práce je i rešerše Titanium Studia. 
+Součástí zadání této práce byla i rešerše Titanium Studia. Jejím cílem bylo ověřit možnost použití této platformy k vývoji desktopových aplikací. Jedna strana jsou oficiální specifikace a na druhé její reálné používání, jak se ukázalo mnohokrát během vývoje. Ve fázi testování se ale ukázalo, že spoustě problémů jsem se vyhnul tím, že jsem vyvíjel v operačním systému Windows a ne na Linuxu nebo Macu, kde už jen samotné zprovoznění IDE se ukázalo jako problém.
+
+Nicméně Titanium API poskytuje spousty funkcí, které by se jinak museli doprogramovávat ručně. Není tak nutné zahrnovat do aplikace skripty napsané v jiném jazyce (Titanium Studio podporuje vývoj v PHP, Ruby a Pythonu) a využít připravené rozhraní. Nedokážu si například představit, jaké by to bylo vytvořit spojení s databází jen pomocí JavaScriptu nebo aplikační menu, které bude snadno rozšiřitelné a použitelné pro uživatele.
+
+Všechno má ale jednu velkou vadu na kráse - vychytávání chyb (debugging). To je v tomto IDE velmi špatně zpracované. Autoři Titanium Studia sice nabízí rozšířený editor, který by měl mít debugging zpracovaný lépe, ale to už není poskytováno zdarma, a to ani ke studijním účelům. Ve většině případů jsem tak byl odkázaný na metodu pokus-omyl, kdy i oprava banálního překlepu může trvat velmi dlouho. Během vývoje této aplikace sice došlo k několika aktualizacím a IDE tak hlásí aspoň některé chyby, ale ve spoustě případů prostě jen zamrzne a neposkytne vůbec žádnou zpětnou vazbu o tom, co a kde se vlastně stalo.
+
+Na základě mých zkušeností mohu Titanium Studio doporučit dalším vývojářům, kteří by chtěli vyvíjet desktopové aplikace v jiném jazyce než v Javě nebo C#. Protože jsem členem redakce Programuje.com, což je momentálně nejčtenější IT magazín v ČR, využil jsem této příležitosti a sepsal jsem menší článek, představující Titanium Studio a práci s ním. Dle reakcí čtenářů lze usoudit, že platforma má před sebou budoucnost a má smysl ji dále rozvíjet.
 
 ## Psaní aplikace zcela v JavaScriptu ##
+Další teorií, kterou měla tato aplikace za cíl potvrdit nebo vyvrátit, byla otázka, zda je možné vytvořit aplikaci zcela v JavaScriptu bez pomoci dalších programovacích jazyků. Ukázalo se, že je to možné, ale zahrnuje to poměrně dost úskalí a kompromisů. Není například možné vytvářet rozhraní (interface) ve smyslu Javy nebo i PHP. To samé se týka abstraktních tříd. Rozšiřování aplikace o další moduly tak není tak snadné, jak by mohlo teoreticky být.
+
+Dalším problémem je to, že JavaScript není primárně objektový jazyk, ale spíš procedurální a některé konstrukce se vytváří hodně neohrabaně. Problém, se kterým jsem se často potýkal, je ztráta kontextu objektu. Nebylo tak možné přímo volat metody objektu, i když se zrovna prováděl kód v jiné z jeho metod. Toto se stávalo hlavně při obsluze asynchronního volání, kdy si metoda musela získat svého vlastníka z globálního kontejneru, kam byly všechny velké třídy (Application, Sync, Viewer a Model) ukládány.
+
+Neduhem aplikací napsaných v JavaScriptu je také přehršel funkcí, které je nutné zakládat velmi často a celý kód se tak znepřehledňuje kvůli velkému množství závorek. Tento problém by částečně mohla vyřešit knihovna CoffeeScript, která používá hlavně odsazování a spousty závorek nepotřebuje, protože je schopná si je "domyslet". Bohužel je určena hlavně pro Linux a její zprovoznění na Windows se ukázalo jako velmi problematické. Také by to znamenalo nutnost učit se novou syntaxi a to by vývoj pravděpodobně zpomalilo.
+
 ## Nové funkce do budoucna ##
-## zminit se o clanku na Programujte.com ##
+Primárním cílem této práce bylo potvrzení výše zmíněných teorií a splnění zadaných user stories. Aplikace ale určitě není dokonalá a spousta užitečných funkcí by se dala doimplementovat. Mezi ně určitě patří nějaká vyrovnávací paměť mezi aplikací a databází, která se ukázala jako dobrý nápad do budoucna během zátěžových testů. Další funkce, na které se přišlo během vývoje a které byly zařezeny do kategorie "hezké mít" (nice-to-have) jsou tyto:
+
+* sledování i cizích projektů
+* vytváření vlastních přehledů úkolů (kombinace štítků a projektů)
+* automatické sledování commitů do synchronizovaného repozitáře
+* modulárnější vizuální stránka s využitím knihovny MustacheJS
+
+Tyto funkce se ukázaly buď jako obtížně realizovatelné (vyrovnávací paměť, vytváření vlastních přehledů) nebo poměrně zbytečné (MustacheJS, sledování commitů), ale přesto byly uloženy, aby se na ně nezapomnělo. Plánuji se do budoucna vývoji v Titanium Studiu dále věnovat a možná dojde i na rozšíření této aplikace.
