--- a/texts/markdown/09. zdroje.md
+++ b/texts/markdown/09. zdroje.md
@@ -5,3 +5,5 @@ http://testovanisoftwaru.cz/manualni-testovani/modely-zivotniho-cyklu-softwaru/r
 http://soch.cz/blog/management/agile/proc-piseme-user-story/
 
 http://www.smokycogs.com/blog/titanium-tutorial-how-to-upload-a-file-to-a-server/ (architektura - TS - AJAX)
+http://programujte.com/clanek/2012020900-titanium-studio-napiste-si-desktopovou-aplikaci-v-javascriptu/ (zhodnoceni - prace TS)
+http://mustache.github.com/ (zhodnoceni - nove funkce)
