Texty - oprava chyb

--- a/texts/markdown/01. uvod.md
+++ b/texts/markdown/01. uvod.md
@@ -1,12 +1,12 @@
 ## Úvod ##
-Obsahem mojí bakalářské práce je vytvoření nástroje primárně pro vývojáře, kteří pracují na projektech hostovaných na jednom z těchto tří verzovacích serverů: Google Code, Assembla a GitHub. Nástroj ale poslouží i ostatním vývojářům, byť nejsou primární cílovou skupinou. Využití najde i u běžných uživatelů, konkrétně u těch, kteří svůj čas organizují metodikou "Getting Things Done" (GTD).
+Obsahem mojí bakalářské práce je vytvoření nástroje primárně pro vývojáře, kteří pracují na projektech hostovaných na jednom z těchto tří verzovacích serverů: Google Code, Assembla a GitHub. Nástroj ale poslouží i ostatním vývojářům, byť nejsou primární cílovou skupinou. Využití najde i u běžných uživatelů. Konkrétně u těch, kteří svůj čas organizují metodikou "Getting Things Done" (GTD).
 
 Hlavním obsahem mojí práce je vytvoření a otestování aplikace za použití vývojového prostředí Titanium Studio. Výstupem práce by měla být kromě samotné aplikace i menší rešerše Titanium Studia a práce s ním.
 
 Aplikace by měla usnadnit sledování a plánování úkolů, které je nutné splnit v různých projektech, uložených na různých verzovacích serverech. Vše bude na jednom místě a např. senior vývojář už nebude muset všechny servery obcházet po jednom.
 
-Klíčovou funkcí aplikace je manipulace s úkoly (issues/tickets), tzn. jejich zakládání, úprava, delegování a uzavírání. Úkoly jsou v aplikaci sdruženy do projektů, ke kterým jsou přiřazeni konkrétní uživatelé. Každý úkol nebo projekt může mít přiřazeno neomezené množství štítků (labels), podle kterých je pak možné filtrovat.
+Klíčovou funkcí aplikace je manipulace s úkoly (issues/tickets), tzn. jejich zakládání, úprava, delegování a uzavírání. Úkoly jsou v aplikaci sdruženy do projektů, ke kterým jsou přiřazeni konkrétní uživatelé. Každý úkol nebo projekt může mít navíc přiřazeno neomezené množství štítků (labels), podle kterých je pak možné filtrovat.
 
-V aplikaci je možné vygenerovat si přehledné grafy, které názorně ukáží jak, který člen týmu na projektu spolupracoval. Vedoucí týmu tak bude vědět, kterým lidem by měl práci přidat a kterým naopak nepřidělovat tolik úkolů.
+V aplikaci je možné vygenerovat si přehledné grafy, které názorně ukáží, jak který člen týmu na projektu spolupracoval. Vedoucí týmu tak bude vědět, kterým lidem by měl práci přidat a kterým naopak nepřidělovat práce tolik.
 
 Občas se hodí mít aktuální úkoly na papíře, kde si do nich člověk může čmárat poznámky a různé skicy. Aplikace proto nabízí možnost vytisknout si jakýkoliv přehled úkolů, ať už jsou to úkoly v projektu nebo jen nějaký výběr z nich (např. podle štítků).
