--- a/texts/markdown/03. metodika.md
+++ b/texts/markdown/03. metodika.md
@@ -16,9 +16,9 @@ Požadavky v rámci agilních metodik se nezapisují jako prosté úkoly, ale ma
 
 Takto formulovaný požadavek je pro člověka mnohem srozumitelnější, protože vidí proč daný úkol splnit a co to komu přinese. Má tak jistotu, že nedělá něco zbytečného. User story je takový krátký příbeh a jako takový je lidským mozkem snáz vnímaný.
 
-User stories nám poslouží i po ukončení vývoje - při akceptačních testech. Stačí projít seznam user stories a pokud najdeme jejich "odraz" v aplikaci, test byl úspěšný. Proto je lepší, aby user stories prošli schválením od klienta ještě před začátkem vývoje.
+User stories nám poslouží i po ukončení vývoje - při akceptačních testech. Stačí projít seznam user stories a pokud najdeme jejich "odraz" v aplikaci, test byl úspěšný. Proto je lepší, aby user stories prošly schválením od klienta ještě před začátkem vývoje.
 
-V rámci této bakalářské práce byl vytvořen následující seznam user stories, který je pro lepší přehlednost rozdělen do skupin podle cílové skupiny. Každá skupina je uvedena názvem role, kde lomítko značí dědičnost. Jsou v něm zachyceny všechny požadavky, které by měla aplikace po ukončení vývoje splňovat.
+V rámci této bakalářské práce byl vytvořen následující seznam user stories, který je pro lepší přehlednost rozdělen do bloků podle cílové skupiny. Každý blok je uveden názvem role, kde lomítko značí dědičnost. Jsou v něm zachyceny všechny požadavky, které by měla ideálně aplikace po ukončení vývoje splňovat.
 
 ### Uživatel ###
 
