Texty - zaver + rozsireni motivace

--- a/texts/markdown/02. motivace.md
+++ b/texts/markdown/02. motivace.md
@@ -130,9 +130,9 @@ V dnešní době už desktopové aplikace vycházejí z módy. Všechna data a a
 
 ### Bezpečnost ###
 
-Data na internetu jsou obvykle uložena na nějakém vzdáleném serveru a my nemáme jistotu o tom, že k nim nemá přístup někdo nepovolaný. U desktopových aplikací lze bezpečnost snadno ohlídat minimálně pomocí hesla, příp. šifrováním obsahu na pevném disku. Pokud máme obsah uložený na jednom pevném disku, zvyšuje se pravděpodobnost ztráty dat, takže je nutné pravidelné zálohování. O to se u vzdáleného serveru obvykle starat nemusíme, tam je to samozřejmostí.
+Data na internetu jsou obvykle uložena na nějakém vzdáleném serveru a my nemáme jistotu o tom, že k nim nemá přístup někdo nepovolaný. U desktopových aplikací lze bezpečnost snadno ohlídat minimálně pomocí hesla, příp. šifrováním obsahu na pevném disku. Pokud ale máme obsah uložený na jednom pevném disku, zvyšuje se pravděpodobnost ztráty dat, takže je nutné pravidelné zálohování. O to se u vzdáleného serveru obvykle starat nemusíme, tam je to samozřejmostí.
 
-Proč byla tedy zvolena klasická (desktopová) aplikace? Důvody jsou v zásadě dva - rešerše práce s vývojovým prostředím Titanium Studio a experiment, zda je možné napsat kompletní aplikaci pouze pomocí JavaScriptu. 
+Jak je vidět, obě varianty mají svá pro a proti, proč tedy byla zvolena klasická (desktopová) aplikace? Důvody jsou v zásadě dva - rešerše práce s vývojovým prostředím Titanium Studio a experiment, zda je možné napsat kompletní aplikaci pouze pomocí JavaScriptu. 
 
 ### Využití JavaScriptu ###
 
