--- a/texts/markdown/08. zaver.md
+++ b/texts/markdown/08. zaver.md
@@ -1,2 +1,4 @@
-# Zaver #
-- abstrakt naruby (co jsem udelal a jak to dopadlo)
+# Závěr #
+Výsledkem této práce je nástroj, který v sobě integruje správu tří verzovacích serverů. Protože se poskytovaná API hodně liší, byla nutná spousta kompromisů pro zachování konzistence ovládání aplikace. Tím je sice uživatel ochuzen o několik extra funkcí poskytovaných těmito servery, ale to hlavní je v aplikaci umožněno. Na čem by se dalo určitě ještě zapracovat je vizuální stránka aplikace, která dost často rozhoduje o úspěchu aplikace. Bohužel jako programátor nemám moc velké výtvarné nadání a barevné cítění.
+
+Důležitou součástí vývoje software je testování ve všech různých podobách. Při vývoji tohoto nástroje to nebylo jinak. Během vývoje byly prováděny jednotkové (unit) testy, po dokončení implementační fáze bylo provedeno zátěžové testování výpisu úkolů, což se ukázalo jako časově velmi náročná operace. Úplně nakonec byly provedeny akceptační testy na základě sepsaných user stories. V původním plánu bylo i provedení testu s uživateli, ale na ten už bohužel nezbyl čas.
